# zk_bio_identity

./: MANUAL_INSTALLATION.md  README.md  pyproject.toml
agent_local/: README.md  config.example.yaml  config.py  frappe_client.py  install_windows.ps1  logging_config.py  main.py  models.py  service.py
agent_local/providers/: base.py  factory.py  mock_provider.py  zkteco_sdk_provider.py
docs/: API_REFERENCE.md  ARCHITECTURE.md
zk_bio_identity/: api.py  hooks.py  modules.txt  patches.txt
zk_bio_identity/setup/: install.py
zk_bio_identity/zk_bio_identity/doctype/biometric_credential/: biometric_credential.json
zk_bio_identity/zk_bio_identity/doctype/biometric_device/: biometric_device.json
zk_bio_identity/zk_bio_identity/doctype/biometric_event_log/: biometric_event_log.json
zk_bio_identity/zk_bio_identity/doctype/biometric_scan_session/: biometric_scan_session.json  biometric_scan_session.py
zk_bio_identity/zk_bio_identity/doctype/zk_bio_settings/: zk_bio_settings.json  zk_bio_settings.py
zk_bio_identity/zk_bio_identity/page/biometric_attendance_dashboard/: biometric_attendance_dashboard.js  biometric_attendance_dashboard.json  biometric_attendance_dashboard.py
zk_bio_identity/zk_bio_identity/page/biometric_connect_device/: biometric_connect_device.js  biometric_connect_device.json
zk_bio_identity/zk_bio_identity/page/biometric_enroll_user/: biometric_enroll_user.js  biometric_enroll_user.json
zk_bio_identity/zk_bio_identity/page/biometric_identify_user/: biometric_identify_user.js  biometric_identify_user.json
(+2 files in other folders)
