[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zk-bio-identity"
version = "0.1.0"
description = "Frappe app for biometric identification, enrollment, and attendance workflows with a local ZKTeco agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["zk_bio_identity*"]

[tool.setuptools.package-data]
"zk_bio_identity" = ["**/*.json", "**/*.js", "**/*.html", "**/*.md", "modules.txt"]

[deploy.dependencies.apt]
packages = []
